--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ subprojects {
     apply plugin: 'java'
 
     group 'ru.xkr1se'
-    version '1.0-SNAPSHOT'
+    version '1.0'
 
     repositories {
         mavenCentral()
